--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -95,7 +95,7 @@
   width: 1px;
 
   &:checked + label::before {
-    background: url("../../img/svg/checkbox-mark-l.svg") center no-repeat;
+    background: url("../img/svg/checkbox-mark-l.svg") center no-repeat;
   }
 }
 
