--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -15,10 +15,10 @@
   padding-bottom: 249px;
 
   @media (min-width: $vp-1024) {
-    background: url("../../img/paper-airplane.png") 6.3% 44.3% no-repeat;
+    background: url("../img/paper-airplane.png") 6.3% 44.3% no-repeat;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/paper-airplane@2x.png") 6.3% 44.3% no-repeat;
+      background: url("../img/paper-airplane@2x.png") 6.3% 44.3% no-repeat;
       background-size: 38.4%;
     }
   }
@@ -198,10 +198,10 @@
   width: 1px;
 
   &:checked + label::before {
-    background: url("../../img/svg/checkbox-mark-l.svg") center no-repeat;
+    background: url("../img/svg/checkbox-mark-l.svg") center no-repeat;
 
     @media (max-width: $vp-767) {
-      background: url("../../img/svg/checkbox-mark-s.svg") center no-repeat;
+      background: url("../img/svg/checkbox-mark-s.svg") center no-repeat;
     }
   }
 }
