fix path for mask image and hovers for input and advantages items

--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -30,7 +30,7 @@
     font-size: 156px;
     line-height: 1.41;
     color: transparent;
-    background: url("../../img/mask.jpg") 22% 57% no-repeat;
+    background: url("../img/mask.jpg") 22% 57% no-repeat;
     background-clip: text;
 
     @media (max-width: $vp-1023) {
