--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -27,7 +27,7 @@ body {
   font-family: "PT Mono", "Courier", monospace;
   font-style: normal;
   font-weight: 400;
-  background-color: $color-whisper2;
+  background-color: $color-alice-blue2;
   color: $color-default-white;
 }
 
