--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -43,6 +43,7 @@ $vp-767:                            767px;
 $vp-768:                            768px;
 $vp-1023:                           1023px;
 $vp-1024:                           1024px;
+$vp-1189:                           1189px;
 $vp-1190:                           1190px;
 $vp-1240:                           1240px;
 
