--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -26,13 +26,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 
-  @media (max-width: $vp-1190) {
+  @media (max-width: $vp-1189) {
     justify-content: flex-end;
   }
 
   @media (max-width: $vp-1023) {
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
   @media (max-width: $vp-767) {
