--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -24,7 +24,8 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  padding-bottom: 6px;
+  padding-top: 10px;
+  padding-bottom: 15px;
 
   @media (max-width: $vp-767) {
     padding-right: 15px;
@@ -46,6 +47,20 @@
   @media (max-width: $vp-767) {
     max-width: 35px;
     max-height: 35px;
+  }
+}
+
+.header__contacts {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 635px;
+
+  @media (max-width: $vp-1240) {
+    max-width: 420px;
+  }
+
+  @media (max-width: $vp-767) {
+    max-width: 240px;
   }
 }
 
@@ -89,7 +104,7 @@
   margin-right: 155px;
 
   @media (max-width: $vp-1240) {
-    margin-right: 0;
+    margin-right: 20px;
   }
 }
 
@@ -97,7 +112,7 @@
   margin-right: 100px;
 
   @media (max-width: $vp-1240) {
-    margin-right: 0;
+    margin-right: 20px;
   }
 }
 
