--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -46,6 +46,7 @@ $vp-1024:                           1024px;
 $vp-1189:                           1189px;
 $vp-1190:                           1190px;
 $vp-1240:                           1240px;
+$vp-1320:                           1320px;
 
 // Retina
 // ---------------------------------
